--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
               <li><a href="">Contact</a></li>
               <li><a href="">Vacancy's</a></li>
               <li><a href="">Client Referal Form</a></li>
+              <li><a href="">Corporate</a></li>
             </ul>
           </div>
         </div>
@@ -131,71 +132,52 @@
         </div>
       </div>
 
-      <div class="container second-section">
-        <div class="row middle-xs">
-          <div class="col-md-6">
-            <h2>What we do</h2>
-            <div class="animatable bounceInLeft">
-              <p>
-                LAPIS provides specialist counselling and psychotherapy to
-                people affected by disability and life changing health issues.
-              </p>
-              <p>
-                We help disabled people and their family members/carers who are
-                experiencing anxiety, depression, difficulties in relationships
-                and other psychological health problems.
-              </p>
+      <div style="padding: 4em 0">
+        <div class="container second-section">
+          <div class="row middle-xs">
+            <div class="col-md-5">
+              <h2>What we do</h2>
+              <div class="animatable fadeInUp">
+                <p>
+                  LAPIS provides specialist counselling and psychotherapy to
+                  people affected by disability and life changing health issues.
+                  We help disabled people and their family members/carers who
+                  are experiencing anxiety, depression, difficulties in
+                  relationships and other psychological health problems.
+                </p>
+              </div>
+              <!-- <button class="secondary-bttn">About us</button> -->
             </div>
-            <!-- <button class="secondary-bttn">About us</button> -->
-          </div>
-          <div class="col-md-5 col-md-offset-1 end-xs">
-            <img
-              src="https://as1.ftcdn.net/v2/jpg/01/97/21/68/1000_F_197216881_9nHLLNvwQYPwKb4h6P7shwZon2bqAk1A.jpg"
-            />
-          </div>
-        </div>
-      </div>
-
-      <!-- mission -->
-
-      <div class="mission">
-        <div class="container">
-          <div class="row center-xs">
-            <div class="col-md-7">
-              <h2>
-                Community <br />
-                Involvement
-              </h2>
-              <p class="animatable fadeInUp">
-                Aliqua minim adipisicing eu nostrud excepteur duis culpa
-                proident eiusmod irure. Laborum officia in laborum ut dolore
-                elit tempor. Enim ullamco commodo nostrud incididunt sunt cillum
-                officia.
-              </p>
+            <div class="col-md-6 col-md-offset-1 end-xs">
+              <img
+                style="width: 90%"
+                src="https://as1.ftcdn.net/v2/jpg/01/97/21/68/1000_F_197216881_9nHLLNvwQYPwKb4h6P7shwZon2bqAk1A.jpg"
+              />
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- auto slider -->
-
-      <div class="auto-slider-container">
-        <div class="container">
-          <div class="row auto-slider">
-            <div class="col-md-12 item">
-              <img src="slide.png" />
+        <div class="container second-section">
+          <div class="row middle-xs">
+            <div class="col-md-6">
+              <img
+                style="width: 90%"
+                src="https://as1.ftcdn.net/v2/jpg/02/12/44/96/1000_F_212449622_6z35DS45croOPsTE2akIZkQilN0wkiog.jpg"
+              />
             </div>
-            <div class="col-md-12 item">
-              <img src="slide2.png" />
-            </div>
-            <div class="col-md-12 item">
-              <img src="slide3.png" />
-            </div>
-            <div class="col-md-12 item">
-              <img src="slide4.png" />
-            </div>
-            <div class="col-md-12 item">
-              <img src="slide5.png" />
+            <div class="col-md-5 col-md-offset-1">
+              <h2>How we help</h2>
+              <div class="animatable fadeInUp">
+                <p>
+                  Ut sint dolore duis esse laboris non in sit ex sunt fugiat
+                  mollit aute. Aliquip ipsum duis enim amet nulla veniam
+                  incididunt eiusmod est adipisicing dolore quis labore aute.
+                  Qui eu amet esse velit id laborum id sunt consectetur et
+                  excepteur dolore. Lorem consectetur est irure qui. Ea sit
+                  pariatur aute amet ullamco .
+                </p>
+              </div>
+              <!-- <button class="secondary-bttn">About us</button> -->
             </div>
           </div>
         </div>
@@ -276,6 +258,51 @@
         </div>
       </div>
 
+      <!-- mission -->
+
+      <div class="mission">
+        <div class="container">
+          <div class="row center-xs">
+            <div class="col-md-7">
+              <h2>
+                Community <br />
+                Involvement
+              </h2>
+              <p class="animatable fadeInUp">
+                Aliqua minim adipisicing eu nostrud excepteur duis culpa
+                proident eiusmod irure. Laborum officia in laborum ut dolore
+                elit tempor. Enim ullamco commodo nostrud incididunt sunt cillum
+                officia.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- auto slider -->
+
+      <div class="auto-slider-container">
+        <div class="container">
+          <div class="row auto-slider">
+            <div class="col-md-12 item">
+              <img src="slide.png" />
+            </div>
+            <div class="col-md-12 item">
+              <img src="slide2.png" />
+            </div>
+            <div class="col-md-12 item">
+              <img src="slide3.png" />
+            </div>
+            <div class="col-md-12 item">
+              <img src="slide4.png" />
+            </div>
+            <div class="col-md-12 item">
+              <img src="slide5.png" />
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- 6 images -->
 
       <!-- <div class="six-images">
@@ -291,7 +318,7 @@
               <img src="https://dummyimage.com/200x200/fff/aaa" />
             </div>
             <div class="col-xs-6 col-md-4 col-lg-2">
-              <img src="https://dummyimage.com/200x200/fff/aaa" />
+              <img src="https://dummyimage.com/200x200/fff/aaa" />PIpsum ut amet aute culpa. Irure labore enim in adipisicing mollit amet aliquip dolore adipisicing duis adipisicing. Culpa cillum proident excepteur ad. Fugiat anim duis deserunt irure nostrud sunt ea culpa do mollit ea. Occaecat deserunt voluptate eu et minim ea pariatur veniam sint id eiusmod culpa officia aliqua.
             </div>
             <div class="col-xs-6 col-md-4 col-lg-2">
               <img src="https://dummyimage.com/200x200/fff/aaa" />
@@ -302,6 +329,24 @@
           </div>
         </div>
       </div> -->
+
+      <div class="slim-banner">
+        <div class="container">
+          <div class="row middle-xs">
+            <div class="col-md-7">
+              <h2>Need help?</h2>
+              <p>
+                Ullamco id exercitation commodo mollit elit irure proident.
+                Proident id anim fugiat consectetur esse fugiat commodo mollit
+                veniam.
+              </p>
+            </div>
+            <div class="col-md-5 end-xs">
+              <button>Contact Us</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!-- slider -->
 
