buttons and updates

--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
         <div class="hero__overlay">
           <div class="container" style="padding: 5rem">
             <div class="row center-xs">
-              <div class="col-md-9">
+              <div class="col-md-10">
                 <h1>Lapis</h1>
                 <p>
                   Low cost, open-ended specialist disability psychotherapy to
                   anyone with a physical disability or learning disability who
                   lives in London
                 </p>
-                <button>Get in touch!</button>
+                <button>Contact us!</button>
               </div>
             </div>
           </div>
@@ -137,7 +137,7 @@
           <div class="row middle-xs">
             <div class="col-md-5">
               <h2>What we do</h2>
-              <div class="animatable fadeInUp">
+              <div>
                 <p>
                   LAPIS provides specialist counselling and psychotherapy to
                   people affected by disability and life changing health issues.
@@ -167,7 +167,7 @@
             </div>
             <div class="col-md-5 col-md-offset-1">
               <h2>How we help</h2>
-              <div class="animatable fadeInUp">
+              <div>
                 <p>
                   Ut sint dolore duis esse laboris non in sit ex sunt fugiat
                   mollit aute. Aliquip ipsum duis enim amet nulla veniam
